--- a/templates/elements/board/form_post_options.html
+++ b/templates/elements/board/form_post_options.html
@@ -27,7 +27,7 @@
     </tr>
     <tr>
         <td class="form themed bold">
-            <label for="delete_password">Password to Delete <span title="Max 512 characters. Use unique passwords for different posts and record them somewhere (see manual for more info).">&#9432;</span></label>
+            <label for="delete_password">Delete Password <span title="Max 512 characters. Use unique passwords for different posts and record them somewhere (see manual for more info).">&#9432;</span></label>
         </td>
         <td>
             <input class="form" style="width: 100%; box-sizing: border-box;" type="password" maxlength="512" id="delete_password" name="delete_password" value="{% if 'delete_password' in form_populate and form_populate['delete_password'] %}{{form_populate['delete_password']}}{% endif %}"/>
@@ -35,9 +35,9 @@
     </tr>
     <tr>
         <td class="form themed bold">
-            <label for="schedule_post_epoch">Schedule to Post after Epoch <span title="If epoch is in the future, the post will be scheduled to be posted after the epoch. Use an epoch converter.">&#9432;</span></label>
+            <label for="schedule_post_epoch">Schedule Post Epoch <span title="If epoch is in the future, the post will be scheduled to be posted after the epoch. If the format 'xxxxxx-yyyyyy' is used, the post will occur at a random time between the two epochs. Use an epoch converter.">&#9432;</span></label>
         </td>
         <td>
-            <input class="form" style="width: 100%; box-sizing: border-box;" type="number" step="1" id="schedule_post_epoch" name="schedule_post_epoch" value="{% if 'schedule_post_epoch' in form_populate and form_populate['schedule_post_epoch'] %}{{form_populate['schedule_post_epoch']}}{% else %}{{time.time()|int}}{% endif %}"/>
+            <input class="form" style="width: 100%; box-sizing: border-box;" type="text" id="schedule_post_epoch" name="schedule_post_epoch" value="{% if 'schedule_post_epoch' in form_populate and form_populate['schedule_post_epoch'] %}{{form_populate['schedule_post_epoch']}}{% else %}{{time.time()|int}}{% endif %}"/>
         </td>
     </tr>
