--- a/templates/elements/board/form_post_thread_rules.html
+++ b/templates/elements/board/form_post_thread_rules.html
@@ -17,7 +17,7 @@
         </tr>
         <tr>
           <td colspan="2" class="themed">
-            Select the minimum difficulty and iteration, where total=(2^Difficulty)*Repetitions.
+            Set difficulty & repetitions, where min POW=(2^Difficulty)*Repetitions.
           </td>
         </tr>
         <tr>
