--- a/templates/pages/confirm.html
+++ b/templates/pages/confirm.html
@@ -251,7 +251,7 @@
                 This will delete the post for everyone and requires the password that was submitted when the post was made. Any from address can be used.
             </div>
             <div class="themed bold" style="padding-bottom: 1em">
-                Password to Delete
+                Delete Password
                 <input name="text" type="password"/>
             </div>
             <div class="themed bold" style="padding-bottom: 1.5em">
