--- a/templates/pages/help.html
+++ b/templates/pages/help.html
@@ -7,10 +7,10 @@
     p {
         padding: 0.3em 0;
     }
-    .text-functions table {
+    table {
         border: 1px solid black;
     }
-    .text-functions th, td {
+    th, td {
         border: 1px solid black;
         padding: 0.8em;
     }
@@ -60,10 +60,8 @@
     {% include '/elements/banner.html' %}
     <br/>
 
-    <div class="container">
-        <div class="themed" style="max-width: 800px;">
-            {% include '/pages/manual.html' %}
-        </div>
+    <div class="themed" style="max-width: 1600px; padding: 0.5em; margin-left: auto; margin-right: auto;">
+        {% include '/pages/manual.html' %}
     </div>
 
     <div style="padding-top: 2em"></div>
