--- a/templates/pages/help_text_formatting.html
+++ b/templates/pages/help_text_formatting.html
@@ -1,4 +1,4 @@
-<table class="text-formatting">
+<table>
     <tr style="font-weight: bold;">
         <td>Type</td>
         <td>Format</td>
@@ -181,5 +181,16 @@
    ____/ o o \
  /~____  =ø= /
 (______)__m_m)</span></td>
+    </tr>
+    <tr>
+        <td>Code</td>
+        <td style="white-space: nowrap;"><pre>[code]if True:
+    return None
+else:
+    return True[/code]</pre></td>
+        <td><div class="code">if True:
+    return None
+else:
+    return True</div></td>
     </tr>
 </table>
