--- a/templates/pages/board.html
+++ b/templates/pages/board.html
@@ -55,8 +55,48 @@ Board
  - {% endblock %}
 
 {% block head %}
+    <style>
+        .image_thumb {
+            max-height: 50px;
+            max-width: 100px;
+        }
 
-    {% include '/elements/js_post_paste_attachment.html' %}
+        .large_image_wrp {
+          display: flex;
+          font-weight: normal;
+          max-width: 850px;
+          margin: 5px 0 0 5px;
+          color: black;
+          position: fixed;
+          top: 0%;
+          left: 0%;
+          pointer-events: none;
+          flex-flow: row wrap;
+          align-content: space-between;
+          overflow: hidden;
+          z-index: 999;
+        }
+
+        .image_thumb + .large_image_wrp {
+            z-index: 10;
+            display: none;
+        }
+
+        .image_thumb:hover + .large_image_wrp {
+            display: flex;
+        }
+
+        .large-image {
+            max-width: 100%;
+            max-height: 100%;
+            border-radius: 4px;
+            box-shadow: 1px 1px 3px 3px rgba(127, 127, 127, 0.15);
+        }
+    </style>
+
+    <script>
+        {% include '/elements/js_post_paste_attachment.js' %}
+    </script>
 
     <script>
         function checkForm(form) {
@@ -80,17 +120,27 @@ Board
         });
 
     {% if rules and "automatic_wipe" in rules %}
-    {% include '/elements/timer_content_wipe.html' %}
+        {% include '/elements/timer_content_wipe.html' %}
     {% endif %}
+    </script>
 
     {% if settings.enable_kiosk_mode and settings.kiosk_post_rate_limit %}
-        {% include '/elements/js_post_countdown.html' %}
+    <script>
+        {% include '/elements/js_post_countdown.js' %}
+    </script>
     {% endif %}
 
     </script>
     <style>
         .page-nav {
             font-size: 1.3em
+        }
+    </style>
+
+    <style>
+        div.force-max-height > div > div > blockquote.post {
+            max-height: 25em;
+            overflow-y: auto;
         }
     </style>
 {% endblock %}
@@ -340,13 +390,12 @@ Board
 
         {% else %}
 
-    <div class="thread" style="padding-bottom: 1em">
+    <div class="thread{% if thread.post_max_height_local and user_options['options_disable_forced_max_height'] != '1' %} force-max-height{% endif %}" style="padding-bottom: 1em">
             {% if post_op %}
                 {{generate_post_html(post_op.message_id, board_view=True)|safe}}
             {% else %}
                 {% include '/elements/board/op_missing.html' %}
             {% endif %}
-
 
             {% if message_reply_all_count > 5 %}
         <br>
@@ -363,19 +412,18 @@ Board
             {% endif %}
 
             {% for each_message in message_replies.all() %}
-        <div class="post plaque" id="{{each_message.post_id}}">
-            {{generate_post_html(each_message.message_id, board_view=True)|safe}}
+        <div class="reply-wrap">
+            <div class="post plaque{% if thread.post_max_height_local and user_options['options_disable_forced_max_height'] != '1' %} force-max-height{% endif %}" style="display: inline-block" id="{{each_message.post_id}}">
+              {{generate_post_html(each_message.message_id, board_view=True)|safe}}
+            </div>
         </div>
             {% endfor %}
-
     </div>
-
         {% endif %}
 
-        {% if loop.index < threads|length %}<hr/>{% endif %}
-    {% endfor %}
+        <hr/>
 
-    <hr/>
+    {% endfor %}
 
     <div class="themed" style="text-align: right; padding-right: 1.5em;">
         <a class="link" title="Catalog" href="/overboard/{{board['current_chan'].address}}/1">Catalog</a>
