--- a/templates/pages/manual.html
+++ b/templates/pages/manual.html
@@ -278,6 +278,17 @@ get people to join my board?</h2>
 link. If your board is private, you will have to add the Identity
 address of each person to the User addresses field under ‘Owner Options’
 on the index page of your board.</p>
+<h2 id="what-is-minode">What is MiNode?</h2>
+<p>Bitmessage normally can only operate over the clearnet or tor. MiNode
+enables bitmessage to operate over I2P, providing better privacy and
+security than the clearnet, and possibly more than tor. MiNode can be
+configured to operate only over I2P, or any combination of
+I2P/tor/clearnet. There are other MiNode users that operate on multiple
+networks and synchronize the bitmessage block between the networks,
+meaning you don’t have to connect to every network to be able to
+communicate to users on another network. This allows one instance of
+BitChan using MiNode only on I2P to communicate with another instance of
+BitChan using MiNode only on tor (or clearnet).</p>
 <h1 id="permissions">Permissions</h1>
 <p>For both boards and lists, there can be Owner, Admin, and User
 addresses specified. If you control an address that is an Owner or Admin
@@ -402,11 +413,11 @@ include:</p>
 you and are allowed to post on the board. If the owner of the board has
 restricted certain addresses from posting and it’s one you control, it
 will not appear in this list.</p>
-<p><strong><em>Board/Thread Default From</em></strong></p>
+<p><strong><em>Default From</em></strong></p>
 <p>The address that’s selected when this option is enabled will be
-pre-populated every time you compose a post. When viewing the index of a
-board, a Board Default From option is available and when viewing a
-thread, a Thread Default From option is available.</p>
+pre-populated every time you compose a post on a Board or a reply of the
+Thread. These can be different addresses saved for a Board or a
+Thread.</p>
 <p><strong><em>Flag</em></strong></p>
 <p>This list contains nation flags to choose from. The selected flag
 will appear next to the From Address in the post header. You can also
@@ -462,6 +473,12 @@ There is also an ‘X’ for removing a selected file attachment.</p>
 <p><strong><em>Strip EXIF (JPG/PNG only)</em></strong></p>
 <p>This option removes EXIF data from .jpg and .png files prior to
 posting to a board.</p>
+<p><strong><em>Hash Filename</em></strong></p>
+<p>Change the original attachment filenames to the SHA256 hashes of the
+files. First, a random filename is generated before saving the file to
+disk, to prevent recovery efforts from discovering the original
+filename. Then, the SHA256 hash is calculated and the file renamed,
+before sending the post.</p>
 <p><strong><em>Upload Method</em></strong></p>
 <p>Select the desired file transfer method. There are three different
 upload methods supported: Bitmessage, I2P BitTorrent, and 3rd Party
@@ -492,17 +509,17 @@ deleted. Because OP healing is possible, by default, attachments are
 seeded longer for OPs than replies. The same encryption and obfuscation
 method is used, as described in the Bitmessage section, above.</p>
 <p>The last upload method is using a 3rd party upload site. There are
-many upload sites on tor hidden onions and i2p eepsites that share a
-common API. These can only be accessed via tor and i2p, increasing
-security, but these should be considered the least secure of the three.
-You should assume many or all of these 3rd party upload sites are
-honeypots, making them the least secure of the three upload methods. The
+many upload sites on the clearnet, tor hidden onions, and i2p eepsites
+that share a common API. Although some of these 3rd party sites may
+provide some security via tor or i2p, this upload method should be
+considered the least secure of the three. You should assume somewhere
+between some and all of these 3rd party upload sites are honeypots. The
 same encryption and obfuscation method is used, as described in the
 Bitmessage section, above.</p>
 <p><strong><em>Upload Encryption</em></strong></p>
 <p>Select which cipher and key bit length you want to use to encrypt
 your file attachments.</p>
-<p><strong><em>Image to Insert Steg</em></strong></p>
+<p><strong><em>Steg Image</em></strong></p>
 <p>This dropdown lets you select the image to insert the steganographic
 comment. This only works for JPG attachments.</p>
 <p><strong><em>Steg Comment (JPG only)</em></strong></p>
@@ -510,7 +527,7 @@ comment. This only works for JPG attachments.</p>
 Some images may not work due to limitations of the software or a
 characteristic of the particular image. You should receive an error if
 it’s unable to be performed. This only works for JPG attachments.</p>
-<p><strong><em>Password to Delete</em></strong></p>
+<p><strong><em>Delete Password</em></strong></p>
 <p>A password can be supplied with a post to be able to delete the post
 at a later time. This password will initially be hashed with SHA512 and
 the hash sent with the post. At a later time, a request can be made to
@@ -531,6 +548,11 @@ those users can use that password to delete your other posts).</li>
 <li>Do write down your posts and passwords because the password will not
 be automatically saved for later retrieval.</li>
 </ol>
+<p><strong><em>Schedule Post Epoch</em></strong></p>
+<p>An epoch in the future can be entered to schedule the post.
+Alternatively, an epoch range in the format “xxxxxx-yyyyyy” can be used
+to schedule the post to occur at a random time between the two
+epochs.</p>
 <h2 id="text-modifications">Text Modifications</h2>
 <p>There are several strings that will format text or execute functions
 in messages. These range from changing to color of text to generating
@@ -703,13 +725,13 @@ comment that everyone will see. Otherwise, you can locally delete any
 post and add a comment of your choice. The option to locally delete any
 post and add a comment exists regardless of the permission level.</p>
 <h3 id="delete-post-using-password">Delete Post Using Password</h3>
-<p>If you previously created a post and provided a Password to Delete,
-you may use this option to delete the post for all users. You must
-provide the same password that was originally provided. This password
-will be sent as plain text, and once this message propagates on the
-network and is received, BitChan will hash the password and compare it
-to the password hash that was originally saved when the post was made.
-If the hashes match, the post will be deleted.</p>
+<p>If you previously created a post and provided a Delete Password, you
+may use this option to delete the post for all users. You must provide
+the same password that was originally provided. This password will be
+sent as plain text, and once this message propagates on the network and
+is received, BitChan will hash the password and compare it to the
+password hash that was originally saved when the post was made. If the
+hashes match, the post will be deleted.</p>
 <h1 id="threads">Threads</h1>
 <p>Threads are collections of posts under a single subject that are
 displayed sequentially in the order in which they were sent. The
@@ -1155,6 +1177,10 @@ revealed. This option sets a limit for how large the
 decompressed/decrypted post attachment file size can be. This setting
 also restricts the size of attachments when creating posts, which can be
 useful if running a public kiosk to limit the total attachment size.</p>
+<h3 id="default-selected-upload-method">Default Selected Upload
+Method</h3>
+<p>Set the default post upload method. This simply sets which dropdown
+option is selected by default.</p>
 <h3
 id="automatically-start-i2p-bittorrent-downloads-for-my-posts">Automatically
 Start I2P BitTorrent Downloads for My Posts</h3>
@@ -1290,8 +1316,9 @@ knownnodes.dat with your own bitmessage to BitChan’s
 /usr/local/bitchan/bitmessage/knownnodes.dat (especially if bootstraping
 is not occurring in a timely manner).</p>
 <p>Here are the keys.dat settings for each option (from <a
-href="https://wiki.bitmessage.org/index.php/FAQ#How_do_I_setup_Bitmessage_as_a_hidden_service_on_Tor">Bitmessage
-FAQ: How do I setup Bitmessage as a hidden service on Tor</a>):</p>
+href="https://wiki.bitmessage.org/index.php/FAQ#How_do_I_setup_Bitmessage_as_a_hidden_service_on_Tor"
+class="link">Bitmessage FAQ: How do I setup Bitmessage as a hidden
+service on Tor</a>):</p>
 <table>
 <colgroup>
 <col style="width: 33%" />
@@ -1342,7 +1369,7 @@ abcdefgh.onion<br/>onionbindip = 127.0.0.1<br/>onionport =
 </tbody>
 </table>
 <p>If MiNode is selected, MiNode will act as a bridge between Bitmessage
-and peers. This is now Bitmessage can communicate over I2P.</p>
+and peers. This is how Bitmessage can communicate over I2P.</p>
 <h3 id="only-allow-bitmessage-to-connect-to-onion-services">Only Allow
 Bitmessage to Connect to Onion Services</h3>
 <p>If tor is permitted to be used for incoming/outgoing connections,
@@ -1695,7 +1722,22 @@ and JavaScript as well as additional options, described below.</p>
 <p>Enter custom JavaScript here. The JavaScript is added to a
 cookie.</p>
 <h2 id="options-tab">Options Tab</h2>
-<p>Locally change your theme here.</p>
+<p>Locally change options that will be added to a cookie.</p>
+<h3 id="theme-1">Theme</h3>
+<p>Set the theme.</p>
+<h3 id="post-max-height">Post Max Height</h3>
+<p>Set the maximum post height, with larger posts overflowing with a
+scrollbar.</p>
+<h3 id="disable-forced-post-max-height">Disable Forced Post Max
+Height</h3>
+<p>If a thread has the Force Post Max Height attribute set, this can
+override that setting and show the full posts. without a scrollbar. This
+is useful if you want to take screenshots of threads that have had the
+max post height set.</p>
+<h3 id="horizontal-posts">Horizontal Posts</h3>
+<p>This switches from vertical to horizontal post page formatting.</p>
+<h3 id="hide-authors">Hide Authors</h3>
+<p>This prevents post author information from being shown.</p>
 <h1 id="bug">Bug</h1>
 <p>This is a form to anonymously report bugs or send feature requests.
 Click the BitChan Log link to view and copy any relevant errors from the
