--- a/templates/pages/recent.html
+++ b/templates/pages/recent.html
@@ -37,6 +37,13 @@
             margin: 0 auto;
         }
     </style>
+
+    <style>
+        div.force-max-height > div > div > blockquote.post {
+            max-height: 25em;
+            overflow-y: auto;
+        }
+    </style>
 {% endblock %}
 
 {% block body %}
@@ -59,29 +66,24 @@
         {% include '/elements/footer_recent_pages.html' %}
 
     <form action="/recent/{% if recent_info['single_board'] %}{{recent_info['board_address']}}{% else %}0{%endif %}/{{recent_page}}" method="post">
-    <table class="themed" id="checker" style="margin-left: auto; margin-right: auto;">
+    <table class="themed" id="checker" style="margin-left: auto; margin-right: auto; width: 100%; max-width: 1800px; display: table; table-layout: fixed;">
         <tr class="alternate">
-            {% if global_admin %}
-            <td class="pad"><input type="checkbox" onClick="toggle(this)"/></td>
-            {% endif %}
-            <td class="pad">Age</td>
+
+            <td class="pad">{% if global_admin %}<input type="checkbox" onClick="toggle(this)"/> {% endif %}Age</td>
             <td class="pad">OP</td>
             <td class="pad">Replies</td>
-            <td class="pad">Sticky</td>
-            <td class="pad">Lock</td>
-            <td class="pad">Anchor</td>
+            <td class="pad">Attributes</td>
             {% if not recent_info["single_board"] %}<td class="pad">Board</td>{% endif %}
             <td class="pad">Subject</td>
         </tr>
         {% for each_msg in recent_results %}
             {% if each_msg.thread and each_msg.thread.chan %}
 
-            {% set thread_options = get_thread_options(each_msg.thread.thread_hash) %}
+                {% set thread_options = get_thread_options(each_msg.thread.thread_hash) %}
         <tr class="alternate">
-            {% if global_admin %}<td></td>{% endif %}
-            <td class="pad">{{display_time(now - each_msg.timestamp_sent)}}</td>
-            <td  class="pad" style="text-align: center">{% if each_msg.is_op %}OP{% endif %}</td>
-            <td  class="pad" style="text-align: center">
+            <td class="pad">{% if global_admin %}<input type="checkbox" id="selectbulk_{{each_msg.message_id}}" name="selectbulk_{{each_msg.message_id}}" value="y"> {% endif %}{{display_time(now - each_msg.timestamp_sent)}}</td>
+            <td class="pad">{% if each_msg.is_op %}OP{% endif %}</td>
+            <td class="pad">
                 {%- if each_msg.post_ids_replying_to_msg == "[]" -%}
                 0
                 {%- elif each_msg.post_ids_replying_to_msg|length == 13 -%}
@@ -90,7 +92,7 @@
                 {{(each_msg.post_ids_replying_to_msg | length) - (each_msg.post_ids_replying_to_msg | replace(",","") | length) + 1}}
                 {%- endif -%}
             </td>
-            <td  class="pad" style="text-align: center">
+            <td  class="pad">
             {% if thread_options["sticky"] %}
                 <img style="position: relative; top: 3px; height: 15px" title="Sticky{% if thread_options['sticky_local'] %} (Local){% endif %}{% if thread_options['sticky_remote'] %} (Remote){% endif %}" src="/static/
                 {%- if thread_options['sticky_local'] and not thread_options['sticky_remote'] -%}
@@ -102,8 +104,6 @@
                 {%- endif -%}
                 ">
             {% endif %}
-            </td>
-            <td  class="pad" style="text-align: center">
             {% if thread_options["lock"] %}
                 <img style="position: relative; top: 3px; height: 15px" title="Locked{% if thread_options['lock_local'] %} (Local){% endif %}{% if thread_options['lock_remote'] %} (Remote){% endif %}" src="/static/
                 {%- if thread_options['lock_local'] and not thread_options['lock_remote'] -%}
@@ -115,8 +115,6 @@
                 {%- endif -%}
                 ">
             {% endif %}
-            </td>
-            <td  class="pad" style="text-align: center">
             {% if thread_options["anchor"] %}
                 <img style="position: relative; top: 3px; height: 15px" title="Anchored{% if thread_options['anchor_local'] %} (Local){% endif %}{% if thread_options['anchor_remote'] %} (Remote){% endif %}" src="/static/
                 {%- if thread_options['anchor_local'] and not thread_options['anchor_remote'] -%}
@@ -128,9 +126,12 @@
                 {%- endif -%}
                 ">
             {% endif %}
+            {% if each_msg.sage %}
+                <img style="position: relative; height: 15px" title="Sage" src="/static/leaf.png">
+            {% endif %}
             </td>
-            {% if not recent_info["single_board"] %}<td><a class="link" title="{{each_msg.thread.chan.description|safe}}" href="/board/{{each_msg.thread.chan.address}}/1">/{{each_msg.thread.chan.label|safe}}/</a></td>{% endif %}
-            <td class="pad">
+            {% if not recent_info["single_board"] %}<td style="overflow-wrap: break-word;"><a class="link" title="{{each_msg.thread.chan.description|safe}}" href="/board/{{each_msg.thread.chan.address}}/1">/{{each_msg.thread.chan.label|safe}}/</a></td>{% endif %}
+            <td class="pad" style="overflow-wrap: break-word;">
             {% set op_msg = table_messages.query.filter(and_(table_messages.thread_id == each_msg.thread.id, table_messages.is_op.is_(True))).first() %}
             {% if not each_msg.is_op and op_msg %}
                 {{generate_reply_link_and_popup_html(op_msg, board_view=True, external_thread=True, link_text=each_msg.thread.subject)|safe}}
@@ -140,10 +141,11 @@
             </td>
         </tr>
         <tr class="alternate">
-            {% if global_admin %}
-            <td class="pad"><input type="checkbox" id="selectbulk_{{each_msg.message_id}}" name="selectbulk_{{each_msg.message_id}}" value="y"></td>
-            {% endif %}
-            <td class="pad" colspan="{% if not recent_info['single_board'] %}8{% else %}7{% endif %}">{{generate_post_html(each_msg.message_id, board_view=True)|safe}}</td>
+            <td class="pad" colspan="{% if not recent_info['single_board'] %}6{% else %}5{% endif %}">
+                <div class="{% if each_msg.thread.post_max_height_local and user_options['options_disable_forced_max_height'] != '1' %} force-max-height{% endif %}">
+                    {{generate_post_html(each_msg.message_id, board_view=True)|safe}}
+                </div>
+            </td>
         </tr>
             {% endif %}
         {% endfor %}
