--- a/templates/pages/search.html
+++ b/templates/pages/search.html
@@ -60,7 +60,7 @@
             </select>
             <select name="search_boards">
                 <option value="all"{% if search_boards == 'all' %} selected{% endif %}>All Boards</option>
-        {% for each_chan in table_boards.query.all() if each_chan.type == 'board' and ((not global_admin and not each_chan.restricted) or global_admin) %}
+        {% for each_chan in table_chan.query.all() if each_chan.type == 'board' and ((not global_admin and not each_chan.restricted) or global_admin) %}
                 <option value="{{each_chan.address}}"{% if search_boards == each_chan.address %} selected{% endif %}>({{(each_chan.address)[:8]}}...) /{{each_chan.label|safe}}/</option>
         {% endfor %}
             </select>
@@ -85,20 +85,14 @@
     <form action="/search/{{search_string_b64}}/{{current_page}}" method="post">
 
         {% if search_type == "posts" and search_results %}
-    <table class="table themed" style="margin-left: auto; margin-right: auto;">
+    <table class="table themed" style="margin-left: auto; margin-right: auto; width: 100%; max-width: 1800px; display: table; table-layout: fixed;">
         <tr>
-            {% if global_admin %}
-            <td><input type="checkbox" onClick="toggle(this)"/></td>
-            {% endif %}
-            <td>Post ID</td>
+            <td>{% if global_admin %}<input type="checkbox" onClick="toggle(this)"/> {% endif %}Post ID</td>
             <td>Sent</td>
             <td>Age</td>
             <td>OP</td>
             <td>Replies</td>
-            <td>Sticky</td>
-            <td>Lock</td>
-            <td>Anchor</td>
-            <td>Sage</td>
+            <td>Attributes</td>
             <td title="Posted with your Identity address">Ident</td>
             <td>Board</td>
             <td>Subject</td>
@@ -108,25 +102,22 @@
 
                     {% set thread_options = get_thread_options(each_msg.thread.thread_hash) %}
         <tr>
-                    {% if global_admin %}
-            <td><input type="checkbox" id="selectbulk_{{each_msg.message_id}}" name="selectbulk_{{each_msg.message_id}}" value="y"></td>
-                    {% endif %}
             <td>
-                {{generate_reply_link_and_popup_html(each_msg, board_view=True, external_thread=True, link_text=each_msg.post_id, extra_style='font-family:monospace', moderating=global_admin)|safe}}
+                {% if global_admin %}<input type="checkbox" id="selectbulk_{{each_msg.message_id}}" name="selectbulk_{{each_msg.message_id}}" value="y"> {% endif %}{{generate_reply_link_and_popup_html(each_msg, board_view=True, external_thread=True, link_text=each_msg.post_id, extra_style='font-family:monospace', moderating=global_admin)|safe}}
             </td>
             <td style="font-family: monospace">{{timestamp_to_date(each_msg.timestamp_sent)}}</td>
             <td>{{display_time(now - each_msg.timestamp_sent)}}</td>
-            <td style="text-align: center">{% if each_msg.is_op %}X{% endif %}</td>
-            <td  class="pad" style="text-align: center">
-                {%- if each_msg.post_ids_replying_to_msg == "[]" -%}
+            <td>{% if each_msg.is_op %}X{% endif %}</td>
+            <td class="pad">
+                    {%- if each_msg.post_ids_replying_to_msg == "[]" -%}
                 0
-                {%- elif each_msg.post_ids_replying_to_msg|length == 13 -%}
+                    {%- elif each_msg.post_ids_replying_to_msg|length == 13 -%}
                 1
-                {%- else -%}
+                    {%- else -%}
                 {{(each_msg.post_ids_replying_to_msg | length) - (each_msg.post_ids_replying_to_msg | replace(",","") | length) + 1}}
-                {%- endif -%}
+                    {%- endif -%}
             </td>
-            <td style="text-align: center">
+            <td>
                     {% if thread_options["sticky"] %}
                 <img style="position: relative; top: 3px; height: 15px" title="Sticky{% if thread_options['sticky_local'] %} (Local){% endif %}{% if thread_options['sticky_remote'] %} (Remote){% endif %}" src="/static/
                 {%- if thread_options['sticky_local'] and not thread_options['sticky_remote'] -%}
@@ -138,8 +129,6 @@
                 {%- endif -%}
                 ">
                     {% endif %}
-            </td>
-            <td style="text-align: center">
                     {% if thread_options["lock"] %}
                 <img style="position: relative; top: 3px; height: 15px" title="Locked{% if thread_options['lock_local'] %} (Local){% endif %}{% if thread_options['lock_remote'] %} (Remote){% endif %}" src="/static/
                 {%- if thread_options['lock_local'] and not thread_options['lock_remote'] -%}
@@ -151,8 +140,6 @@
                 {%- endif -%}
                 ">
                     {% endif %}
-            </td>
-            <td style="text-align: center">
                     {% if thread_options["anchor"] %}
                 <img style="position: relative; top: 3px; height: 15px" title="Anchored{% if thread_options['anchor_local'] %} (Local){% endif %}{% if thread_options['anchor_remote'] %} (Remote){% endif %}" src="/static/
                 {%- if thread_options['anchor_local'] and not thread_options['anchor_remote'] -%}
@@ -164,17 +151,22 @@
                 {%- endif -%}
                 ">
                     {% endif %}
+                    {% if each_msg.sage %}
+                <img style="position: relative; height: 15px" title="Sage" src="/static/leaf.png">
+                    {% endif %}
             </td>
-            <td style="text-align: center">{% if each_msg.sage %}<img style="position: relative; height: 15px" title="Sage" src="/static/leaf.png">{% endif %}</td>
-            <td style="text-align: center">{% if each_msg.address_from in identities %}<span title="{{get_user_name(each_msg.address_from, '0', full_address=True)}}">X</span>{% endif %}</td>
-            <td><a class="link" title="{{each_msg.thread.chan.description|safe}}" href="/board/{{each_msg.thread.chan.address}}/1">/{{each_msg.thread.chan.label|safe}}/</a></td>
-            <td><a class="link" href="/thread/{{each_msg.thread.chan.address}}/{{each_msg.thread.thread_hash[-12:]}}">{{each_msg.thread.subject|safe}}</a></td>
+            <td>{% if each_msg.address_from in identities %}<span title="{{get_user_name(each_msg.address_from, '0', full_address=True)}}">X</span>{% endif %}</td>
+            <td style="overflow-wrap: break-word;"><a class="link" title="{{each_msg.thread.chan.description|safe}}" href="/board/{{each_msg.thread.chan.address}}/1">/{{each_msg.thread.chan.label|safe}}/</a></td>
+            <td style="overflow-wrap: break-word;"><a class="link" href="/thread/{{each_msg.thread.chan.address}}/{{each_msg.thread.thread_hash[-12:]}}">{{each_msg.thread.subject|safe}}</a></td>
         </tr>
-                    {% else %}
+                {% else %}
         <tr>
             <td style="font-family: monospace">{{each_msg.post_id}}</td>
             <td style="font-family: monospace">{{timestamp_to_date(each_msg.timestamp_sent)}}</td>
             <td>{% if each_msg.is_op %}X{% endif %}</td>
+            <td></td>
+            <td></td>
+            <td></td>
             <td></td>
             <td></td>
             <td></td>
@@ -196,22 +188,17 @@
             <td>Thread Hash</td>
             <td>Last Post</td>
             <td>Age</td>
-            <td>Sticky</td>
-            <td>Lock</td>
-            <td>Anchor</td>
+            <td>Attributes</td>
             <td>Board</td>
             <td>Subject</td>
         </tr>
             {% for each_thread in thread_results %}
                 {% set thread_options = get_thread_options(each_thread.thread_hash) %}
         <tr>
-                {% if global_admin %}
-            <td><input type="checkbox" id="selectbulk_{{each_thread.thread_hash}}" name="selectbulk_{{each_thread.thread_hash}}" value="y"></td>
-                {% endif %}
-            <td style="font-family:monospace">{{each_thread.thread_hash_short}}</td>
+            <td style="font-family:monospace">{% if global_admin %}<input type="checkbox" id="selectbulk_{{each_thread.thread_hash}}" name="selectbulk_{{each_thread.thread_hash}}" value="y">{% endif %}{{each_thread.thread_hash_short}}</td>
             <td style="font-family: monospace">{{timestamp_to_date(each_thread.timestamp_sent)}}</td>
             <td>{{display_time(now - each_thread.timestamp_sent)}}</td>
-            <td style="text-align: center">
+            <td>
                 {% if thread_options["sticky"] %}
                 <img style="position: relative; top: 3px; height: 15px" title="Sticky{% if thread_options['sticky_local'] %} (Local){% endif %}{% if thread_options['sticky_remote'] %} (Remote){% endif %}" src="/static/
                 {%- if thread_options['sticky_local'] and not thread_options['sticky_remote'] -%}
@@ -223,8 +210,6 @@
                 {%- endif -%}
                 ">
                 {% endif %}
-            </td>
-            <td style="text-align: center">
                     {% if thread_options["lock"] %}
                 <img style="position: relative; top: 3px; height: 15px" title="Locked{% if thread_options['lock_local'] %} (Local){% endif %}{% if thread_options['lock_remote'] %} (Remote){% endif %}" src="/static/
                 {%- if thread_options['lock_local'] and not thread_options['lock_remote'] -%}
@@ -236,8 +221,6 @@
                 {%- endif -%}
                 ">
                 {% endif %}
-            </td>
-            <td style="text-align: center">
                     {% if thread_options["anchor"] %}
                 <img style="position: relative; top: 3px; height: 15px" title="Anchored{% if thread_options['anchor_local'] %} (Local){% endif %}{% if thread_options['anchor_remote'] %} (Remote){% endif %}" src="/static/
                 {%- if thread_options['anchor_local'] and not thread_options['anchor_remote'] -%}
