--- a/templates/pages/thread.html
+++ b/templates/pages/thread.html
@@ -60,13 +60,67 @@ Board
  - {% endblock %}
 
 {% block head %}
+    <style>
+        .image_thumb {
+            max-height: 50px;
+            max-width: 100px;
+        }
 
-    {% include '/elements/js_post_paste_attachment.html' %}
+        .large_image_wrp {
+          display: flex;
+          font-weight: normal;
+          max-width: 850px;
+          margin: 5px 0 0 5px;
+          color: black;
+          position: fixed;
+          top: 0%;
+          left: 0%;
+          pointer-events: none;
+          flex-flow: row wrap;
+          align-content: space-between;
+          overflow: hidden;
+          z-index: 999;
+        }
+
+        .image_thumb + .large_image_wrp {
+            z-index: 10;
+            display: none;
+        }
+
+        .image_thumb:hover + .large_image_wrp {
+            display: flex;
+        }
+
+        .large-image {
+            max-width: 100%;
+            max-height: 100%;
+            border-radius: 4px;
+            box-shadow: 1px 1px 3px 3px rgba(127, 127, 127, 0.15);
+        }
+    </style>
 
     <script>
-    {% include '/elements/js_reply_popup.html' %}
+        {% include '/elements/js_post_paste_attachment.js' %}
     </script>
 
+    <script>
+        {% include '/elements/js_reply_popup.js' %}
+    </script>
+
+    {% if settings.enable_kiosk_mode and settings.kiosk_post_rate_limit %}
+    <script>
+        {% include '/elements/js_post_countdown.js' %}
+    </script>
+    {% endif %}
+
+    {% if thread.post_max_height_local and user_options['options_disable_forced_max_height'] != '1' %}
+        <style>
+            blockquote.post {
+                max-height: 25em;
+                overflow-y: auto;
+            }
+        </style>
+    {% endif %}
 
     <style>
         .overlay {
@@ -292,8 +346,9 @@ Board
             {% include '/elements/board/op_missing.html' %}
         {% endif %}
 
-        {% if each_message and settings.debug_posts -%}
-            {%- set debug_post_columns, debug_post_data = debug_info_post(each_message.message_id) -%}
+        {% if message_op and settings.debug_posts -%}
+            {%- set debug_post_columns, debug_post_data = debug_info_post(message_op.message_id) -%}
+            {%- set each_message = message_op -%}
             {% if debug_post_columns and not settings.enable_kiosk_mode or (settings.enable_kiosk_mode and logged_in and has_permission("is_global_admin")) -%}
                 {% include '/elements/board/debug_info_post.html' %}
             {% endif %}
@@ -305,10 +360,11 @@ Board
         {% endif %}
 
         {% for each_message in message_replies.all() -%}
-        <div class="post plaque" id="{{each_message.post_id}}">
-            {{generate_post_html(each_message.message_id)|safe}}
+        <div class="reply-wrap">
+            <div class="post plaque" style="display: inline-block" id="{{each_message.post_id}}">
+              {{generate_post_html(each_message.message_id)|safe}}
+            </div>
         </div>
-
             {% if settings.debug_posts -%}
                 {%- set debug_post_columns, debug_post_data = debug_info_post(each_message.message_id) -%}
                 {% if debug_post_columns and not settings.enable_kiosk_mode or (settings.enable_kiosk_mode and logged_in and has_permission("is_global_admin")) -%}
@@ -347,6 +403,6 @@ Board
     <div style="padding-top: 1em"></div>
 
     <script>
-        {% include '/elements/js_new_post.html' %}
+        {% include '/elements/js_new_post.js' %}
     </script>
 {% endblock %}
